# SOGL

./: .gitignore  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/hello_mesh/: CMakeLists.txt  main.cpp
examples/hello_triangle/: CMakeLists.txt  main.cpp
examples/instanced_rendering/: main.cpp
include/: context.h  framebuffer.h  image.h  shader.h  shader_program.h  sogl.h  texture.h  vertex_array.h  vertex_buffer.h  window.h
include/enums/: buffer_target.h  buffer_usage.h  capability.h  data_type.h  framebuffer_attachment.h  key_type.h  mouse_button.h  primitive_type.h  shader_type.h  texture_format.h  texture_internal_format.h  texture_target.h
src/: context.cpp  context.h  framebuffer.cpp  framebuffer.h  image.cpp  main.cpp  shader.cpp  shader.h  shader_program.cpp  shader_program.h  sogl.cpp  sogl.h  texture.cpp  texture.h  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer.h  window.cpp
src/enums/: buffer_target.cpp  buffer_target.h  buffer_usage.cpp  capability.cpp  data_type.cpp  data_type.h  framebuffer_attachment.cpp  framebuffer_attachment.h  primitive_type.cpp  shader_type.cpp  texture_format.cpp  texture_internal_format.cpp  texture_target.cpp  texture_target.h
